--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,15 @@ pydantic-settings = "^2.6.1"
 pytest-asyncio = "^0.24.0"
 pre-commit = "^4.0.1"
 
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
+addopts = [
+  "--strict-config",
+  "--strict-markers",
+  "--ignore=docs_src",
+]
+xfail_strict = true
+junit_family = "xunit2"
 
 [build-system]
 requires = ["poetry-core"]
