--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ motor = "^3.6.0"
 pydantic-settings = "^2.6.1"
 pytest-asyncio = "^0.24.0"
 pre-commit = "^4.0.1"
+httpx = "^0.28.0"
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
